@@ -1,4 +1,7 @@
 Release ...
+* dpost: If the data in a PFB file to be included does not end with a
+  newline character, add one to the generated PostScript to achieve a
+  consistent DSC structure (Bugreport by Sebastian Leusch).
 * The "-mcolor" macros have been added from Plan 9 sources.
 
 Release 050920
